@startuml

abstract class ElementGraphique {
    # static int m_prochainId
    # int m_id
    + int obtenirId()
    + {abstract} string dessiner()
    + virtual void ajouterEnfant(shared_ptr<ElementGraphique>)
    + virtual void ajouterEnfants(vector<shared_ptr<ElementGraphique>>)
}

abstract class PointBase {
    # int m_x
    # int m_y
    + pair<int, int> obtenirXY()
    + void definirXY(int, int)
    + {abstract} string obtenirTexture()
}

class Point {
    + string obtenirTexture()
}

class Texture {
    # shared_ptr<PointBase> m_element
    + string obtenirTexture()
}

class Texture_O {
    + string obtenirTexture()
}

class Texture_F {
    + string obtenirTexture()
}

class NuagePoints {
    - vector<shared_ptr<ElementGraphique>> m_points
    - string m_texture
    + void ajouterEnfant(shared_ptr<ElementGraphique>)
    + void ajouterEnfants(vector<shared_ptr<ElementGraphique>>)
    + vector<int> obtenirTousIdsPointsRecursivement()
    + string obtenirTexture()
    + string dessiner()
}

class Surface {
    - shared_ptr<NuagePoints> m_nuagePoints
    - shared_ptr<ConstructeurSurface> m_constructeurStrategie
    - vector<shared_ptr<PointBase>> m_points
    + void definirConstructeurSurface(shared_ptr<ConstructeurSurface>)
    + void construire()
    + void ajouterPoint(shared_ptr<PointBase>)
    + const vector<shared_ptr<PointBase>>& obtenirPoints()
    + void viderPoints()
    + shared_ptr<NuagePoints> obtenirNuage()
    + string dessiner()
}

class Plan {
    - vector<shared_ptr<ElementGraphique>> m_elementsGraphiques
    + void creerSurface(int, shared_ptr<ConstructeurSurface>)
    + shared_ptr<NuagePoints> fusionnerEnNuage(vector<int>, vector<string>)
    + void deplacerElementGraphiqueParId(int, pair<int,int>)
    + void supprimerElementGraphiqueParId(int)
    + vector<shared_ptr<ElementGraphique>> obtenirElements()
    + shared_ptr<ElementGraphique> obtenirElementGraphiqueParId(int)
}

interface ConstructeurSurface {
    + {abstract} void construireSurface(Surface&, const NuagePoints&)
}

class ConstructeurSurfaceParOrdreId {
    + void construireSurface(Surface&, const NuagePoints&)
}

class ConstructeurSurfaceParProchVoisin {
    + void construireSurface(Surface&, const NuagePoints&)
}

abstract class Commande {
    + {abstract} void executer()
    + virtual void annuler()
    + virtual bool estAnnulable()
}

class Invocateur {
    - vector<shared_ptr<Commande>> m_pileAnnulation
    - vector<shared_ptr<Commande>> m_pileRetablissement
    + void executer(shared_ptr<Commande>)
    + void annuler()
    + void retablir()
}

class CommandeAffichage {
    - unique_ptr<Affichage> m_affichage
    - Plan& m_plan
    + void executer()
    + bool estAnnulable() : false
}

class CommandeSupprimer {
    - Plan& m_plan
    - int m_id
    + void executer()
    + void annuler()
}

class CommandeDeplacer {
    - Plan& m_plan
    - int m_id
    - pair<int,int> m_position
    - pair<int,int> m_anciennePosition
    + void executer()
    + void annuler()
}

class CommandeFusionEnNuage {
    - Plan& m_plan
    - vector<int> m_ids
    - vector<string> m_textures
    + void executer()
    + void annuler()
}

class CommandeCreerSurface {
    - Plan& m_plan
    - shared_ptr<ConstructeurSurface> m_builder
    + void executer()
}

interface Affichage {
    + {abstract} void afficher(Plan&)
}

class AffichageListe {
    + void afficher(Plan&)
}

abstract class AffichageOrthese {
    + void afficher(Plan&)
    # {abstract} string obtenirRepresentation(shared_ptr<ElementGraphique>)
}

class AffichageAvecID {
    # string obtenirRepresentation(shared_ptr<ElementGraphique>)
}

class AffichageAvecTexture {
    # string obtenirRepresentation(shared_ptr<ElementGraphique>)
}

class FabriquePoint {
    + {static} vector<shared_ptr<ElementGraphique>> creerPointsDepuisChaine(string)
    + {static} shared_ptr<Point> creerPoint(int, int)
}

ElementGraphique <|-- PointBase
ElementGraphique <|-- NuagePoints
ElementGraphique <|-- Surface

PointBase <|-- Point
PointBase <|-- Texture
Texture <|-- Texture_O
Texture <|-- Texture_F
Texture o-- PointBase

NuagePoints o-- ElementGraphique

Surface --> NuagePoints
Surface --> ConstructeurSurface
Surface o-- PointBase

ConstructeurSurface <|.. ConstructeurSurfaceParOrdreId
ConstructeurSurface <|.. ConstructeurSurfaceParProchVoisin

Plan o-- ElementGraphique

Commande <|.. CommandeAffichage
Commande <|.. CommandeSupprimer
Commande <|.. CommandeDeplacer
Commande <|.. CommandeFusionEnNuage
Commande <|.. CommandeCreerSurface

Invocateur o-- Commande

Affichage <|.. AffichageListe
Affichage <|.. AffichageOrthese
AffichageOrthese <|-- AffichageAvecID
AffichageOrthese <|-- AffichageAvecTexture

CommandeAffichage --> Affichage
CommandeAffichage --> Plan
CommandeSupprimer --> Plan
CommandeDeplacer --> Plan
CommandeFusionEnNuage --> Plan
CommandeCreerSurface --> Plan

@enduml
